[gd_scene load_steps=4 format=3 uid="uid://bpl0bm41pvuxg"]

[ext_resource type="Script" uid="uid://cehb0id3qr4rm" path="res://scripts/campfire.gd" id="1_54scn"]
[ext_resource type="Texture2D" uid="uid://cqrwo00oe7jyg" path="res://assets/images/campfire.png" id="2_54scn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87o7u"]
size = Vector2(399, 389)

[node name="Campfire" type="StaticBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_54scn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(4, 4)
texture = ExtResource("2_54scn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.063, 0.063)
shape = SubResource("RectangleShape2D_87o7u")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.25, 0.25)
shape = SubResource("RectangleShape2D_87o7u")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
